[tool.poetry]
name = "mifit_analyzer"
version = "0.1.0"
description = "This tool analyzes the data (steps and sleep) received from the Mi Band fitness bracelet and generates a report based on it."
authors = ["Mikhail Fofanov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
